--- a/exemplo.env
+++ b/exemplo.env
@@ -1,1 +1,4 @@
 URL_DESAFIO=exemplo.com.br
+CONCURRENCY_VALUE=50
+# valor maximo testado no cocurrency 250.
+# tempo em uma internet com a velocidade de 1 mega mais ou menos 1 minuto, mais uns 10 segundos do sorty
